fixed projects float and margin on mobile

--- a/public/assets/style.css
+++ b/public/assets/style.css
@@ -191,7 +191,7 @@ a:hover {
   background-color: white;
 }
 .logo:hover {
-  width: 225px;
+  width: 225px !important;
 }
 .au-cont {
   position: relative;
@@ -785,6 +785,8 @@ a:hover {
     height: 50%;
     padding: 5%;
     position: static;
+    float: none;
+    margin: 0 auto;
   }
 
   .iContent {
